@@ -61,7 +61,8 @@ AMG_tol                  = 1e-6   % tolerance for AMG
 AMG_maxit                = 1      % number of AMG iterations
 AMG_levels               = 10     % max number of levels
 AMG_coarse_dof           = 500    % max number of coarse degrees of freedom
-AMG_coarse_scaling       = OFF     % switch of scaling of the coarse grid correction
+AMG_coarse_solver        = 0      % coarse level solver: 31 SuperLU | 32 UMFPack | 33 MUMPS
+AMG_coarse_scaling       = OFF    % switch of scaling of the coarse grid correction
 AMG_amli_degree          = 2      % degree of the polynomial used by AMLI cycle
 AMG_nl_amli_krylov_type  = 7	  % Krylov method in NLAMLI cycle: 6 FGMRES | 7 GCG
 
